fix button effect, add background image, adjust spacing between sections,correct ReadMe link

--- a/style.css
+++ b/style.css
@@ -128,18 +128,18 @@ hr {
 .work-section-container h2 {
   font-family: 'crete Round', sans-serif;
   text-align: center;
-  border: 1px solid black;
-  font-weight: 400;
-  font-size: 40px;
+  display: flex;
+   font-weight: 400;
+  font-size: 38px;
+  line-height: 52px;
   color: #1c1a19;
   width: 300px;
-  margin: 24px auto;
+  
+  margin: 154px auto 0;
 }
 
 .work-container {
-  padding-right: 12px;
-  padding-left: 12px;
-  padding-bottom: 10px;
+  padding: 12px;
   margin: auto;
   row-gap: 50px;
   display: grid;
@@ -155,9 +155,11 @@ hr {
   padding: 150px 0 0;
   background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("image/background_img/Img-Placeholder.png");
   background-position: center;
+  background-size: contain;
 }
 
 .work-item-1 {
+  padding-top: 12px;
   display: flex;
   flex-direction: column;
   background-image: none;
@@ -223,22 +225,47 @@ hr {
 }
 
 /* ------------- About me ---------------  */
+.abt-sct{
+  background-color: #1C1A19;
+  
+}
 .about-section-container {
   padding: 0 12px 18px;
-  background-color: #1c1a19;
+  background-image: url("image/background_img/backgroud _group/Group@2x.png");
+  background-size: 148px;
+  background-repeat: no-repeat;
+  background-position: 100% 26%;
 }
 
 .about-me {
   padding: 0;
-  margin-bottom: 58px;
+  margin-bottom: 240px;
+  
 }
 
 .res-btn {
-  display: inline;
+  display: flex;
   padding: 12px 16px;
   background-color: #ff6b00;
   font-size: 18px;
+  color: #fff;  
+  font-family: "inter" , sans-serif;
+  font-weight: 700;
+  line-height: 24px;
+  align-items: center;
+  text-align: center;
+  
 }
+.res-btn:hover{
+  background-color: #fff5e1;
+  color: #ff6b00;
+  }
+   .res-btn:active{
+     background-color: #e05304
+    }
+    .res-btn:disabled{
+      background-color: #f4f1f0;
+    }
 
 .about-me h1 {
   font-family: "crete Round", sans-serif;
